--- a/src/demos/vue/01vue介绍.html
+++ b/src/demos/vue/01vue介绍.html
@@ -14,8 +14,7 @@
             let app = new Vue({
                 el: '#app',
                 data: {
-                    message: 'Hello Vue!',
-                    message2: 'Hello Vue!222'
+                    message: 'Hello Vue!'
                 }
             })
             //这样内容不会覆盖
@@ -23,114 +22,93 @@
             //     el: '#app',
             //     data: {
             //         message: '搞事消息',
-            //         message2: '搞事boy'
             //     }
             // })
-            app.message = '搞事消息';
-            app.message2 = '搞事boy';
-            app = new Vue({
-                el: '#app',
+            app.message = '搞事消息'; // 这样会重新覆盖
+
+            // 2、app-2 div的鼠标放上去会显示页面加载于+当前时间
+            let app2 = new Vue({
+                el: '#app-2',
                 data: {
-                    message: '搞事消息重新new',
-                    message2: '搞事boy重新new'
+                    message: '页面加载于 ' + new Date().toLocaleString()
                 }
             })
-            // let appapp = new Vue({
-            //     el: '#app',
-            //     data: {
-            //         message: 'appapp消息',
-            //         message2: 'appappmessage'
-            //     }
-            // })
-            // appapp.message= '搞事消息222';
-            // appapp.message2= '搞事boy222';
-            // alert(appapp.message);
-            //2、id为app2的div中鼠标放在p标签上，会显示当前时间
-            let app2 = new Vue({
-                el: "#app2",
-                data: {
-                    titleMessage: "页面加载于" + new Date().toLocaleDateString()
-                }
-            });
-            //3、class为appclass的div显示ceshi 类
-            let appclass = new Vue({
-                el: "div.appclass",
-                data: {
 
-                    classMessage: "ceshi 类",
-                    classMessage2: "classMessage消息",
-                    dataJson: {
-                        id: "1",
-                        name: "小强",
-                        age: "18",
-                        name: "重名"
-                    },
-                    classMessage: "ceshi 类重名",
-                    dataArray: ["小白", "小黑", "小红", "小狗"]
-                },
-                setMessage: "setMessage消息"
-            });
-            //4、id为app3 的div 内的p，当 app3.issee=true时可见， app3.issee=false不可见
+            // 3 、app3.seen = false不可见app3.seen = true可见
             let app3 = new Vue({
-                el: "#app3",
+                el: '#app-3',
                 data: {
-                    issee: true
+                    seen: true
                 }
-            });
-            //5、class为appclass的div显示ceshi 类
-            let app4 = new Vue({
-                el: "#app4",
-                data: {
-                    dataJson: [{
-                            id: "1",
-                            name: "小强",
-                            age: "18"
-                        },
-                        {
-                            id: "2",
-                            name: "小白",
-                            age: "18"
-                        },
-                        {
-                            id: "3",
-                            name: "小黑",
-                            age: "18"
-                        },
-                        {
-                            id: "4",
-                            name: "小红",
-                            age: "18"
-                        },
-                        {
-                            id: "5",
-                            name: "小狗",
-                            age: "18"
-                        }
-                    ],
-                    dataArray: ["小白", "小黑", "小红", "小狗"]
-                },
-                setMessage: "setMessage消息"
-            });
-            //6按钮逆转
-            let app5 = new Vue({
-                el: "#app5",
-                data: {
-                    message: "好好学习，天天向下。"
+            })
 
+            // 4、app-4的div的ol 会生成5个li
+            let app4 = new Vue({
+                el: '#app-4',
+                data: {
+                    todos: [{
+                            text: '学习 html'
+                        },
+                        {
+                            text: '学习 css'
+                        },
+                        {
+                            text: '学习 js'
+                        },
+                        {
+                            text: '学习 es6'
+                        },
+                        {
+                            text: '学习 vue'
+                        }
+                    ]
+                }
+            })
+
+            ///5、按钮点击事件p标签的内容会变成 息消转逆euV
+            let app5 = new Vue({
+                el: '#app-5',
+                data: {
+                    message: 'Vue逆转消息'
                 },
                 methods: {
-                    addfun: function () {
-                        this.message = this.message + this.message;
-                        // this.message = this.message.split('').reverse().join('')
-
+                    reverseMessage: function () {
+                        this.message = this.message.split('').reverse().join('')
                     }
                 }
-            });
-            /* input标签输入什么p标签就显示什么*/
-            var app6 = new Vue({
-                el: '#app6',
+            })
+            // 6、 input标签输入什么p标签就显示什么
+            let app6 = new Vue({
+                el: '#app-6',
                 data: {
                     message: 'Hello Vue!'
+                }
+            })
+
+            Vue.component('todo-item', {
+                // todo-item 组件现在接受一个
+                // "prop"，类似于一个自定义特性。
+                // 这个 prop 名为 todo。
+                props: ['todo'],
+                template: '<li>{{ todo.text }}</li>'
+            })
+
+            let app7 = new Vue({
+                el: '#app-7',
+                data: {
+                    groceryList: [{
+                            id: 0,
+                            text: '蔬菜'
+                        },
+                        {
+                            id: 1,
+                            text: '奶酪'
+                        },
+                        {
+                            id: 2,
+                            text: '随便其它什么人吃的东西'
+                        }
+                    ]
                 }
             })
         }
@@ -140,51 +118,47 @@
 <body>
     <h3>声明式渲染</h3>
     <div id="app">
-        <p> {{message}}</p>
-        <p> {{message2}}</p>
-
+        {{ message }}
     </div>
-    <hr />
-    <div id="app2">
-        <p v-bind:title="titleMessage"> 鼠标悬停几秒查看此处动态绑定的事件</p>
-    </div>
-    <hr />
-    <div class="appclass">
-        <p> {{classMessage}}</p>
-        <p> {{classMessage2}}</p>
-        <p> {{dataJson}}</p>
-        <p> {{dataArray}}</p>
-        <p> {{dataJson.name+dataJson.age}}</p>
-        <p> {{dataArray[2]}}</p>
+    <div id="app-2">
+        <span v-bind:title="message">
+            鼠标悬停几秒钟查看此处动态绑定的提示信息！
+        </span>
     </div>
     <hr />
     <h3>条件与循环</h3>
-    <div id="app3">
-        <p v-if="issee">你可以看下我了。</p>
+    <div id="app-3">
+        <p v-if="seen">现在你看到我了</p>
     </div>
     <hr />
-    <div id="app4">
+    <div id="app-4">
         <ol>
-            <li v-for="data1 in dataJson">
-                {{data1.name+data1.age}}
-            </li>
-        </ol>
-        <ol>
-            <li v-for="data1 in dataArray">
-                {{data1}}
+            <li v-for="todo in todos">
+                {{ todo.text }}
             </li>
         </ol>
     </div>
     <hr />
-    <div id="app5">
-        <p>{{message}}</p>
-        <button v-on:click="addfun">按钮逆转</button>
-
+    <div id="app-5">
+        <p>{{ message }}</p>
+        <button v-on:click="reverseMessage">逆转消息</button>
     </div>
     <hr />
-    <div id="app6">
+    <div id="app-6">
         <p>{{ message }}</p>
         <input v-model="message">
+    </div>
+    <hr />
+    <div id="app-7">
+        <ol>
+            <!--
+            现在我们为每个 todo-item 提供 todo 对象
+            todo 对象是变量，即其内容可以是动态的。
+            我们也需要为每个组件提供一个“key”，稍后再
+            作详细解释。
+          -->
+            <todo-item v-for="item in groceryList" v-bind:todo="item" v-bind:key="item.id"></todo-item>
+        </ol>
     </div>
 </body>
 
