--- a/src/demos/vuedoc/test.html
+++ b/src/demos/vuedoc/test.html
@@ -11,17 +11,16 @@
 </head>
 
 <body>
-  <div id="app-7" v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }">
-  </div>
+  <ul id="app-7">
+    <li v-for="item in 0">
+      {{item}}
+    </li>
+  </ul>
 </body>
 <script>
-  let app7 = new Vue({
-    el: "#app-7",
-    data: {
-      activeColor: "red",
-      fontSize: 30
-    }
-  });
+let app7 = new Vue({
+  el: "#app-7"
+});
 </script>
 
 </html>
