--- a/src/demos/vuedoc/test.html
+++ b/src/demos/vuedoc/test.html
@@ -11,67 +11,22 @@
 </head>
 
 <body>
-  <div id="todo-list-example">
-    <form v-on:submit.prevent="addNewTodo">
-      <label for="new-todo">Add a todo</label>
-      <input v-model="newTodoText" id="new-todo" placeholder="E.g. Feed the cat" />
-      <button>Add</button>
-    </form>
-    <ul>
-      <li is="todo-item" v-for="(todo, index) in todos" v-bind:key="todo.id" v-bind:title="todo.title"
-        v-on:remove="todos.splice(index, 1)"></li>
-    </ul>
+  <div id="example-4">
+    <button v-on:click="warn('Form cannot be submitted yet.', $event)">
+      Submit
+    </button>
   </div>
 </body>
 <script>
-  var arr = ['a', 'b', 'c', 'd']
-  var newArr1 = arr.splice(2, 0, '张三')
-  console.log(arr) //输出=['a','b','张三','c','d']
-  console.log(newArr1) //[]
-
-  var arr=['a','b','c','d']
-
-var newArr=arr.splice(2,2,'张三','李四')
-
-console.log(arr)           //输出=['a','b','张三','李四']
-
-console.log(newArr)          //输入['c','d']
-  Vue.component("todo-item", {
-    template: "\
-    <li>\
-      {{ title }}\
-      <button v-on:click=\"$emit('remove')\">Remove</button>\
-    </li>\
-  ",
-    props: ["title"]
-  });
-
-  new Vue({
-    el: "#todo-list-example",
-    data: {
-      newTodoText: "",
-      todos: [{
-          id: 1,
-          title: "Do the dishes"
-        },
-        {
-          id: 2,
-          title: "Take out the trash"
-        },
-        {
-          id: 3,
-          title: "Mow the lawn"
-        }
-      ],
-      nextTodoId: 4
-    },
+  let example4 = new Vue({
+    el: "#example-4",
     methods: {
-      addNewTodo: function () {
-        this.todos.push({
-          id: this.nextTodoId++,
-          title: this.newTodoText
-        });
-        this.newTodoText = "";
+      warn: function (message, event) {
+        // 现在我们可以访问原生事件对象
+        if (event) {
+          event.preventDefault();
+        }
+        alert(message);
       }
     }
   });
