--- a/src/demos/vuedoc/test.html
+++ b/src/demos/vuedoc/test.html
@@ -15,6 +15,9 @@
     <button v-on:click="warn('Form cannot be submitted yet.', $event)">
       Submit
     </button>
+    {{msg+test}}
+    <p v-html="msg+test"></p>
+    <p v-html="msg_test"></p>
   </div>
 </body>
 <script>
@@ -28,8 +31,16 @@
         }
         alert(message);
       }
+    },
+    data: {
+      "msg+test": "msg+test ww",
+      "msg-test": "msg-testw ww",
+      msg: "msg",
+      test: "test",
     }
   });
+  console.log(example4["msg+test"]);
+  console.log(example4["msg-test"]);
 </script>
 
 </html>
