--- a/src/demos/vuedoc/15.html
+++ b/src/demos/vuedoc/15.html
@@ -1,274 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <style>
-            .dynamic-component-demo-tab-button {
-                padding: 6px 10px;
-                border-top-left-radius: 3px;
-                border-top-right-radius: 3px;
-                border: 1px solid #ccc;
-                cursor: pointer;
-                background: #f0f0f0;
-                margin-bottom: -1px;
-                margin-right: -1px;
-            }
-            .dynamic-component-demo-tab-button:hover {
-                background: #e0e0e0;
-            }
-            .dynamic-component-demo-tab-button.dynamic-component-demo-active {
-                background: #e0e0e0;
-            }
-            .dynamic-component-demo-tab {
-                border: 1px solid #ccc;
-                padding: 10px;
-            }
-            .dynamic-component-demo-posts-tab {
-                display: flex;
-            }
-            .dynamic-component-demo-posts-sidebar {
-                max-width: 40vw;
-                margin: 0 !important;
-                padding: 0 10px 0 0 !important;
-                list-style-type: none;
-                border-right: 1px solid #ccc;
-            }
-            .dynamic-component-demo-posts-sidebar li {
-                white-space: nowrap;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                cursor: pointer;
-            }
-            .dynamic-component-demo-posts-sidebar li:hover {
-                background: #eee;
-            }
-            .dynamic-component-demo-posts-sidebar
-                li.dynamic-component-demo-active {
-                background: lightblue;
-            }
-            .dynamic-component-demo-post-container {
-                padding-left: 10px;
-            }
-            .dynamic-component-demo-post > :first-child {
-                margin-top: 0 !important;
-                padding-top: 0 !important;
-            }
-        </style>
-        <style type="text/css">
-            .demo-alert-box {
-                padding: 10px 20px;
-                background: #f3beb8;
-                border: 1px solid #f09898;
-            }
 
-            .tab-button {
-                padding: 6px 10px;
-                border-top-left-radius: 3px;
-                border-top-right-radius: 3px;
-                border: 1px solid #ccc;
-                cursor: pointer;
-                background: #f0f0f0;
-                margin-bottom: -1px;
-                margin-right: -1px;
-            }
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <style>
+    </style>
+    <script>
+        window.onload = function () {
+            Vue.component('async-a', function (resolve, reject) {
+                setTimeout(function () {
+                    resolve({
+                        template: '<div>我是async。</div>'
+                    });
+                    //  reject(reason);
+                }, 5000);
+            });
+            new Vue({
+                el: '#async-a-demo'
+            });
 
-            .tab-button:hover {
-                background: #e0e0e0;
-            }
+            // //将异步组件和 webpack 的 code-splitting 功能一起配合使用
+            // Vue.component('async-b', function (resolve) {
+            //     // 这个特殊的 `require` 语法将会告诉 webpack
+            //     // 自动将你的构建代码切割成多个包，这些包
+            //     // 会通过 Ajax 请求加载
+            //     require(['./my-async-component'], resolve);
+            // });
+            //在工厂函数中返回一个 Promise
+            Vue.component(
+                'async-b',
+                // 这个 `import` 函数会返回一个 `Promise` 对象。
+                () => import('./my-async-component.js')
+            );
 
-            .tab-button.active {
-                background: #e0e0e0;
-            }
+            new Vue({
+                el: '#async-b-demo'
+            });
 
-            .tab {
-                border: 1px solid #ccc;
-                padding: 10px;
-            }
-        </style>
-        <script>
-            let app01;
-            let app02;
-            let app03;
-            let app04;
-            let app05;
-            let app06;
-            let app07;
-            window.onload = function() {
-                Vue.component('tab-home', {
-                    template: ` <div>
-                                  home component
-                              </div>`
-                });
-                Vue.component('tab-main', {
-                    data: function() {
-                        return {
-                            posts: [
-                                {
-                                    id: 1,
-                                    title: '儒释道',
-                                    content:
-                                        '<p>儒心是妖，佛心是魔，道心是鬼。</p>'
-                                },
-                                {
-                                    id: 2,
-                                    title: '俏如来',
-                                    content:
-                                        '<p>因果循环有定数，红尘轮回众生顾。放下屠刀虽成佛，愿坠三途灭千魔</p>'
-                                },
-                                {
-                                    id: 3,
-                                    title: '三教',
-                                    content:
-                                        '<p>天地不仁，道吞万物。大爱无情，佛灭众生。 忠义荡然，儒溺千古。</p>'
-                                }
-                            ],
-                            selectedPost: null
-                        };
-                    },
-                    template:
-                        '\
-              <div class="dynamic-component-demo-posts-tab">\
-                <ul class="dynamic-component-demo-posts-sidebar">\
-                  <li\
-                    v-for="post in posts"\
-                    v-bind:key="post.id"\
-                    v-bind:class="{ \'dynamic-component-demo-active\': post === selectedPost }"\
-                    v-on:click="selectedPost = post"\
-                  >\
-                    {{ post.title }}\
-                  </li>\
-                </ul>\
-                <div class="dynamic-component-demo-post-container">\
-                  <div \
-                    v-if="selectedPost"\
-                    class="dynamic-component-demo-post"\
-                  >\
-                    <h3>{{ selectedPost.title }}</h3>\
-                    <div v-html="selectedPost.content"></div>\
-                  </div>\
-                  <strong v-else>\
-                    Click on a blog title to the left to view it.\
-                  </strong>\
-                </div>\
-              </div>\
-            '
-                });
-                app01 = new Vue({
-                    el: '#app01',
-                    data: {
-                        currentTab: 'main',
-                        tabs: ['main', 'home']
-                    },
-                    computed: {
-                        currentTabComponent: function() {
-                            console.log(this.currentTab);
-                            return 'tab-' + this.currentTab.toLowerCase();
-                        }
-                    }
-                });
-                app02 = new Vue({
-                    el: '#app02',
-                    data: {
-                        currentTab: 'main',
-                        tabs: ['main', 'home']
-                    },
-                    computed: {
-                        currentTabComponent: function() {
-                            console.log(this.currentTab);
-                            return 'tab-' + this.currentTab.toLowerCase();
-                        }
-                    }
-                });
-                Vue.component('async-demo', function(resolve, reject) {
-                    setTimeout(function() {
-                        resolve({
-                            template: '<div>我是async。</div>'
-                        });
-                        //  reject(reason);
-                    }, 1000);
-                });
-                app03 = new Vue({
-                    el: '#app03'
-                });
-
-                // Vue.component('async-webpack-example', function(resolve) {
-                //     // 这个特殊的 `require` 语法将会告诉 webpack
-                //     // 自动将你的构建代码切割成多个包，这些包
-                //     // 会通过 Ajax 请求加载
-                //     require(['./my-async-component'], resolve);
-                // });
-                Vue.component(
-                    'async-webpack-example',
-                    // 这个 `import` 函数会返回一个 `Promise` 对象。
-                    () => import('./my-async-component.js')
-                );
-                app04 = new Vue({
-                    el: '#app04'
-                });
-
-                new Vue({
-                    el: '#app05',
-                    components: {
-                        'my-component': () => import('./my-async-component')
-                    }
-                });
-                //处理加载状态
-                const AsyncComponent = () => ({
-                    // 需要加载的组件 (应该是一个 `Promise` 对象)
-                    component: import('./MyComponent.vue'),
-                    // 异步组件加载时使用的组件
-                    loading: LoadingComponent,
-                    // 加载失败时使用的组件
-                    error: ErrorComponent,
-                    // 展示加载时组件的延时时间。默认值是 200 (毫秒)
-                    delay: 200,
-                    // 如果提供了超时时间且组件加载也超时了，
-                    // 则使用加载失败时使用的组件。默认值是：`Infinity`
-                    timeout: 3000
-                });
-                //
+            new Vue({
+                el: '#async-c-demo',
+                components: {
+                    'async-c': () => import('./my-async-component.js')
+                }
+            });
+            var LoadingComponent = {
+                /* ... */
             };
-        </script>
-    </head>
+            var ErrorComponent = {
+                /* ... */
+            };
+            //处理加载状态
+            let AsyncComponent = () => ({
+                // 需要加载的组件 (应该是一个 `Promise` 对象)
+                component: import('../MyComponent.vue'),
+                // 异步组件加载时使用的组件
+                loading: LoadingComponent,
+                // 加载失败时使用的组件
+                error: ErrorComponent,
+                // 展示加载时组件的延时时间。默认值是 200 (毫秒)
+                delay: 200,
+                // 如果提供了超时时间且组件加载也超时了，
+                // 则使用加载失败时使用的组件。默认值是：`Infinity`
+                timeout: 3000
+            });
 
-    <body>
-        <div id="app01">
-            <button
-                v-for="tab in tabs"
-                v-bind:key="tab"
-                v-bind:class="['dynamic-component-demo-tab-button', { 'dynamic-component-demo-active': currentTab === tab }]"
-                v-on:click="currentTab = tab"
-            >
-                {{ tab }}
-            </button>
-            <component v-bind:is="currentTabComponent"></component>
-        </div>
-        <hr />
-        <div id="app02">
-            <button
-                v-for="tab in tabs"
-                v-bind:key="tab"
-                v-bind:class="['dynamic-component-demo-tab-button', { 'dynamic-component-demo-active': currentTab === tab }]"
-                v-on:click="currentTab = tab"
-            >
-                {{ tab }}
-            </button>
-            <keep-alive>
-                <component v-bind:is="currentTabComponent"></component>
-            </keep-alive>
-        </div>
-        <div id="app03">
-            <async-demo></async-demo>
-        </div>
-        <div id="app04">
-            <async-webpack-example></async-webpack-example>
-        </div>
-        <div id="app05">
-            <my-component></my-component>
-        </div>
-    </body>
+            new Vue({
+                el: '#my-component-demo',
+                components: {
+                    myComponent: () => AsyncComponent
+                }
+            });
+            //
+        };
+    </script>
+</head>
+
+<body>
+    <div id="async-a-demo">
+        async-a
+        <async-a></async-a>
+    </div>
+    <div id="async-b-demo">
+        async-b
+        <async-b></async-b>
+    </div>
+    <div id="async-c-demo">
+        async-c
+        <async-c></async-c>
+    </div>
+    <div id="my-component-demo">
+        <my-component></my-component>
+    </div>
+</body>
+
 </html>
