--- a/src/notes/vuecourse/test.html
+++ b/src/notes/vuecourse/test.html
@@ -11,98 +11,69 @@
 </head>
 
 <body>
-    <div id="dynamic-component-demo" class="demo">
-        <button v-for="tab in tabs" v-bind:key="tab"
-            v-bind:class="['dynamic-component-demo-tab-button', { 'dynamic-component-demo-active': currentTab === tab }]"
-            v-on:click="currentTab = tab">{{ tab }}</button>
-        <component v-bind:is="currentTabComponent" class="dynamic-component-demo-tab"></component>
+    <h2>blog-post-a postTitle Dom:</h2>
+    <div id="blog-post-dom-1">
+     有效
+     <blog-post-a post-title="post-title Dom!"></blog-post-a>
+     无效
+     <blog-post-a postTitle="postTitle Dom!"></blog-post-a>
+     无效
+     <blog-post-a posttitle="posttitle Dom!"></blog-post-a>
     </div>
-    <br>
-    <div id="dynamic-component-keep-alive-demo" class="demo">
-        <!-- 我们可以用一个 <keep-alive> 元素将其动态组件包裹起来。 失活的组件将会被缓存！-->
-        <button v-for="tab in tabs" v-bind:key="tab"
-            v-bind:class="['dynamic-component-demo-tab-button', { 'dynamic-component-demo-active': currentTab === tab }]"
-            v-on:click="currentTab = tab">{{ tab }}</button>
-        <keep-alive>
-            <component v-bind:is="currentTabComponent" class="dynamic-component-demo-tab"></component>
-        </keep-alive>
+    <h2>blog-post-a postTitle template:</h2>
+    <div id="blog-post-template-1"></div>
+    <h2>blog-post-b posttitle Dom:</h2>
+    <div id="blog-post-dom-2">
+     无效
+     <blog-post-b post-title="post-title Dom!"></blog-post-b>
+     无效
+     <blog-post-a postTitle="postTitle Dom!"></blog-post-a>
+     有效
+     <blog-post-b posttitle="posttitle Dom!"></blog-post-b>
     </div>
+    <h2>blog-post-b posttitle template:</h2>
+    <div id="blog-post-template-2"></div>
 </body>
 <script>
-    Vue.component('tab-posts', {
-        data: function () {
-            return {
-                posts: [{
-                        id: 1,
-                        title: '儒释道',
-                        content: '<p>儒心是妖，佛心是魔，道心是鬼。</p>'
-                    },
-                    {
-                        id: 2,
-                        title: '三教',
-                        content: '<p>天地不仁，道吞万物。大爱无情，佛灭众生。 忠义荡然，儒溺千古。</p>'
-                    },
-                    {
-                        id: 3,
-                        title: '神魔非我',
-                        content: '<p>魔心开杀，神意止杀。</p>'
-                    }
-                ],
-                selectedPost: null
-            }
-        },
-        template: `<div class="dynamic-component-demo-posts-tab">
-                      <ul class="dynamic-component-demo-posts-sidebar">
-                        <li
-                          v-for="post in posts"
-                          v-bind:key="post.id"
-                          v-bind:class="{ 'dynamic-component-demo-active': post === selectedPost }"
-                          v-on:click="selectedPost = post"
-                        >
-                          {{ post.title }}
-                        </li>
-                      </ul>
-                      <div class="dynamic-component-demo-post-container">
-                        <div 
-                          v-if="selectedPost"
-                          class="dynamic-component-demo-post"
-                        >
-                          <h3>{{ selectedPost.title }}</h3>
-                          <div v-html="selectedPost.content"></div>
-                        </div>
-                        <strong v-else>
-                            点击左边的博客标题查看。
-                        </strong>
-                      </div>
-                    </div>`
-    })
-    Vue.component('tab-archive', {
-        template: '<div>存档组件</div>'
-    })
-    let dynamicComponentDemo = new Vue({
-        el: '#dynamic-component-demo',
-        data: {
-            currentTab: 'Posts',
-            tabs: ['Posts', 'Archive']
-        },
-        computed: {
-            currentTabComponent: function () {
-                return 'tab-' + this.currentTab.toLowerCase()
-            }
-        }
-    })
-    let dynamicComponentKeepAliveDemo = new Vue({
-        el: '#dynamic-component-keep-alive-demo',
-        data: {
-            currentTab: 'Posts',
-            tabs: ['Posts', 'Archive']
-        },
-        computed: {
-            currentTabComponent: function () {
-                return 'tab-' + this.currentTab.toLowerCase()
-            }
-        }
-    })
+   // 在 JavaScript 中是 camelCase 的
+// props 中区分大小写的
+Vue.component("blog-post-a", {
+ props: ["postTitle"],
+ template: "<h4>{{ postTitle }}</h4>"
+});
+Vue.component("blog-post-b", {
+ props: ["posttitle"],
+ template: "<h4>{{ posttitle }}</h4>"
+});
+let blogPostDom1 = new Vue({
+ el: "#blog-post-dom-1"
+});
+let blogPostDom2 = new Vue({
+ el: "#blog-post-dom-2"
+});
+let blogPostTemplate1 = new Vue({
+ el: "#blog-post-template-1",
+ template:`<div>
+           有效
+           <blog-post-a post-title="post-title 字符串模板!"></blog-post-a>
+           有效
+           <blog-post-a postTitle="postTitle 字符串模板!"></blog-post-a>
+           无效
+           <blog-post-a posttitle="posttitle 字符串模板!"></blog-post-a>
+       </div>`
+});
+// 有效
+let blogPostTemplate2 = new Vue({
+ el: "#blog-post-template-2",
+ template:`<div>
+           无效
+           <blog-post-b post-title="post-title 字符串模板!"></blog-post-b>
+           无效
+           <blog-post-b postTitle="postTitle 字符串模板!"></blog-post-b>
+           有效
+           <blog-post-b posttitle="posttitle 字符串模板!"></blog-post-b>
+       </div>`
+});
 </script>
 <style>
     .dynamic-component-demo-tab-button {
