20200122提交处理边界值

--- a/src/notes/vuecourse/16.html
+++ b/src/notes/vuecourse/16.html
@@ -7,52 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="https://www.js-css.cn/jscode/date/date4/css/pikaday.css" />
+    <script type="text/javascript" src="https://www.js-css.cn/jscode/date/date4/js/pikaday.min.js"></script>
 </head>
 
 <body>
-    <div id="app">
-        <my-component> </my-component>
+    <div id="app-8">
+        <my-component inline-template>
+          <div>
+            <p>These are compiled as the component's own template.</p>
+            <p>Not parent's transclusion content.</p>
+          </div>
+        </my-component>
     </div>
 </body>
 <script>
-    Vue.component("my-component", {
-        template: `
-            <div class="blog-post">
-                <button @click="handleClose()">点击</button>
-            </div>`,
-        methods: {
-            handleClose() {
-                // 获取根组件的数据
-                console.log(this.$root.foo);
-                // 写入根组件的数据
-                this.$root.foo = 2;
-                console.log(this.$root.foo);
-                // 访问根组件的计算属性
-                console.log(this.$root.bar);
-                // 调用根组件的方法
-                console.log(this.$root.baz());
-            }
-        }
-    });
-    // Vue 根实例
-    new Vue({
-        el: '#app',
-        data: {
-            foo: 1
-        },
-        computed: {
-            bar: function () {
-                return this.foo + 'bar';
-            }
-        },
-        methods: {
-            baz: function () {
-                this.foo++;
-                return this.foo + 'baz';
-            }
-        }
-    })
+        Vue.component('my-component', {})
+        // Vue 根实例
+        var app08 = new Vue({
+            el: '#app-8'
+        })
 </script>
 <style>
 
