--- a/src/demos/vueDemo/test.html
+++ b/src/demos/vueDemo/test.html
@@ -7,42 +7,40 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
 </head>
 
 <body>
   <div id="app" class="demo">
-    <p>
-      qty: {{qty}}
-    </p>
-    <p>
-      全局保留整数： {{qty|numFilter}}
-    </p>
-    <p>
-      本地保留两位小数： {{qty|moneyFilter}}
-    </p>
+    <anchored-heading :level="1">第1标题 Hello</anchored-heading>
+    <anchored-heading :level="2">第2标题 Hello</anchored-heading>
+    <anchored-heading :level="4">第4标题 Hello</anchored-heading>
   </div>
 </body>
 <script>
-  Vue.filter('numFilter', function (value) {
-    if (!value) return ''
-    value = value.toFixed(0)
-    return value
-  })
-  new Vue({
-    el: '#app',
-    data: {
-      qty: 123.4566,
-
+  Vue.component('anchored-heading', {
+    render:function(createElement) {
+      return createElement(
+        'h' + this.level, //标签名称
+        this.$slots.default //字节点数组
+      )
     },
-    filters: {
-      moneyFilter: function (value) {
-        if (!value) return ''
-        value = value.toFixed(2)
-        return value
+    //简写
+    // render(h) {
+    //   return h(
+    //     'h' + this.level, //标签名称
+    //     this.$slots.default //字节点数组
+    //   )
+    // },
+    props: {
+      level: {
+        type: Number,
+        required: true
       }
     }
   })
+  new Vue({
+        el:'#app'
+    })
 </script>
 <style>
 
